--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn==20.1.0
 importlib-metadata==6.6.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+logging==0.4.9.6
 MarkupSafe==2.1.2
 psycopg2==2.9.6
 pydantic==1.10.8
